--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
 
         <div class="extra-images">
             <!-- <div class="images-1"></div> -->
-            <img class='images-1' src="pics/1.jpg" alt="pic">
-            <img class='images-2' src="pics/2.jpg" alt="pic">
-            <img class='images-3' src="pics/3.jpg" alt="pic">
+            <img class='images-1' src="Pics/1.jpg" alt="pic">
+            <img class='images-2' src="Pics/2.jpg" alt="pic">
+            <img class='images-3' src="Pics/3.jpg" alt="pic">
         </div>
         <div class="extra-images-1">
-            <img class='images-2' src="pics/2.jpg" alt="pic">
+            <img class='images-2' src="Pics/2.jpg" alt="pic">
         </div>
 
         <!-- footer---------------------------------------------------------------->
