--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="Container">
+    <div class="Container-fluid">
         <div class="login">
             <button type="button" name="button" id='signIn'> <a href="#" target="_blank">Sign In</a></button>
         </div>
