--- a/index.html
+++ b/index.html
@@ -22,10 +22,54 @@
         <div class="login">
             <button type="button" name="button" id='signIn'> <a href="#" target="_blank">Sign In</a></button>
         </div>
-        <nav>
-            <svg class='logo' width="183px" height="46px" viewBox="0 0 183 46" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <!--  navigation-->
+                <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+
+                	 <svg class="navbar-brand logo" width="183px" height="46px" viewBox="0 0 183 46" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                               <!-- Generator: Sketch 47.1 (45422) - http://www.bohemiancoding.com/sketch -->
+                               <title>MyYogaStudio</title>
+                               <desc>Created with Sketch.</desc>
+                               <defs></defs>
+                               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-weight="normal" letter-spacing="-2.23000002" font-size="40.5" font-family="Ming" line-spacing="28">
+                                   <g id="test" transform="translate(-346.000000, -106.000000)">
+                                       <g id="top" transform="translate(0.000000, 57.000000)">
+                                           <g id="logo" transform="translate(337.000000, 16.000000)">
+                                               <text id="MyYogaStudio">
+                                                   <tspan x="0" y="65" fill="#F19E1F"> </tspan>
+                                                   <tspan x="7.93549998" y="65" fill="#F19E1F">My</tspan>
+                                                   <tspan x="46.8509999" y="65" fill="#7D6D5E">Yoga</tspan>
+                                                   <tspan x="107.9555" y="65" fill="#B8BE19">Studi</tspan>
+                                                   <tspan x="174.282" y="65" fill="#B8BE19">o</tspan>
+                                               </text>
+                                           </g>
+                                       </g>
+                                   </g>
+                               </g>
+                           </svg>
+
+                	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                		<span class="navbar-toggler-icon"></span>
+                	</button>
+                	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                		<div class="navbar-nav">
+                            <a class="nav-item nav-link" href="#">New to Yoga?</a>
+                            <a class="nav-item nav-link" href="#" >about us</a>
+                            <a class="nav-item nav-link" href="#">classes</a>
+                            <a class="nav-item nav-link" href="#">schedule</a>
+                            <a class="nav-item nav-link" href="#">appointments</a>
+                            <a class="nav-item nav-link" href="#">workshops</a>
+                            <a class="nav-item nav-link" href="#">reviews</a>
+                            <a class="nav-item nav-link" href="#">store</a>
+                            <a class="nav-item nav-link" href="#">contact us</a>
+                		</div>
+                	</div>
+                </nav>
+
+
+        <!-- <nav>
+            <!-- <svg class='logo' width="183px" height="46px" viewBox="0 0 183 46" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                    <!-- Generator: Sketch 47.1 (45422) - http://www.bohemiancoding.com/sketch -->
-                   <title>MyYogaStudio</title>
+                  <!-- <title>MyYogaStudio</title>
                    <desc>Created with Sketch.</desc>
                    <defs></defs>
                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-weight="normal" letter-spacing="-2.23000002" font-size="40.5" font-family="Ming" line-spacing="28">
@@ -73,33 +117,31 @@
             <a href="#">reviews</a>
             <a href="#">store</a>
             <a href="#">contact us</a>
-        </div>
+        </div>  -->
 
-        <div class="hero">
-            <article class='hero-form'>
-                <!-- <h1>Reach your <br>potential</h1> -->
-                <!-- <div class="form" id='myForm'>
-                    <input type="text" name="first-name" value="first name">
-                    <input type="text" name="last-name" value="Last name">
-                    <input type="text" name="email-address" value="email address">
-                    <input type="text" name="phone-number" value="phone number">
+    <div class="hero">
+        <article class='hero-form'>
+            <!-- <h1>Reach your <br>potential</h1> -->
+            <!-- <div class="form" id='myForm'>
+                <input type="text" name="first-name" value="first name">
+                <input type="text" name="last-name" value="Last name">
+                <input type="text" name="email-address" value="email address">
+                <input type="text" name="phone-number" value="phone number">
 
-                    <button type="button" name="button"><a href="#">recieve one month free</a></button>
-                </div> -->
+                <button type="button" name="button"><a href="#">recieve one month free</a></button>
+            </div> -->
 
-                <form class="form" id='myForm'>
+            <form class="form" id='myForm'>
 
-                        <!-- <label for="first-name"></label> -->
-                        <input type="text" name="first_name" value="first name">
-
-
-                    <input type="text" name="last-name" value="Last name">
-                    <input type="text" name="email-address" value="email address">
-                    <input type="text" name="phone-number" value="phone number">
-                    <button type="submit" name="button">recieve one month free</button>
-                </form>
-            </article>
-        </div>
+            <!-- <label for="first-name"></label> -->
+                <input placeholder="First name" type="text" name="first_name">
+                <input placeholder="Last name" type="text" name="last-name">
+                <input  placeholder="email"type="text" name="email-address">
+                <input  placeholder="Phone number"type="text" name="phone-number">
+                <button type="submit" name="button">recieve one month free</button>
+            </form>
+        </article>
+    </div>
 
         <!-- new schedules-------------------------------------->
         <!-- <div class='bg'> -->
