--- a/index.html
+++ b/index.html
@@ -53,31 +53,27 @@
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<!-- nav items to the right with ml-auto -->
 				<div class="navbar-nav ml-auto">
-					<a class="nav-item nav-link" href="#">New to Yoga?</a>
-					<a class="nav-item nav-link" href="#">about us</a>
-					<a class="nav-item nav-link" href="#">classes</a>
-					<a class="nav-item nav-link" href="#">schedule</a>
-					<a class="nav-item nav-link" href="#">appointments</a>
-					<a class="nav-item nav-link" href="#">workshops</a>
+					<a class="nav-item nav-link" href="#schedule">New to Yoga?</a>
+					<a class="nav-item nav-link" href="#about">about us</a>
+					<a class="nav-item nav-link" href="#packages">classes</a>
+					<a class="nav-item nav-link" href="#schedule">schedule</a>
+					<a class="nav-item nav-link" href="#schedule">appointments</a>
+					<a class="nav-item nav-link" href="#packages">workshops</a>
 					<a class="nav-item nav-link" href="#">reviews</a>
 					<a class="nav-item nav-link" href="#">store</a>
-					<a class="nav-item nav-link" href="#">contact us</a>
+					<a class="nav-item nav-link" href="#contact">contact us</a>
 				</div>
 			</div>
 		</nav>
 
-
-
-
 		<div class="hero">
 			<article class='hero-form'>
-				<form class="form" id='myForm'>
-
+				<form class="form">
 					<!-- <label for="first-name"></label> -->
-					<input placeholder="First name" type="text" name="first_name">
-					<input placeholder="Last name" type="text" name="last-name">
-					<input placeholder="email" type="text" name="email-address">
-					<input placeholder="Phone number" type="text" name="phone-number">
+					<input placeholder="First name" type="text">
+					<input placeholder="Last name" type="text">
+					<input placeholder="email" type="text">
+					<input placeholder="Phone number" type="text">
 					<button type="submit" name="button">recieve one month free</button>
 				</form>
 			</article>
@@ -85,7 +81,7 @@
 
 		<!-- new schedules-------------------------------------->
 
-		<div class='wrap'>
+		<div class='wrap'id="schedule">
 			<h4 class='section-name'>Class schedules</h4>
 			<div class="container">
 				<div class="row ">
@@ -122,7 +118,7 @@
 
 		<!---packages------------------>
 
-		<div class='bg2'>
+		<div class='bg2' id="packages">
 			<div class='wrap2'>
 				<h4 class='section-name'>packages</h4>
 				<div class="Container">
@@ -168,7 +164,7 @@
 			</div>
 		</div>
 		<!---about-------------------------------------->
-		<section class="wrap-about">
+		<section class="wrap-about" id="about">
 			<div class="about">
 				<div class="about-logo">
 					<h4>welcome to </h4>
@@ -213,7 +209,7 @@
 		</div>
 
 		<!-- footer---------------------------------------------------------------->
-		<div class="footer-wrapper">
+		<div class="footer-wrapper" id="contact">
 			<footer>
 				<section class='logo-end'>
 					<svg width="183px" height="46px" viewBox="0 0 183 46" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
