--- a/index.html
+++ b/index.html
@@ -122,42 +122,58 @@
 			<div class='wrap2'>
 				<h4 class='section-name'>packages</h4>
 				<div class="Container">
-					<div class=" row packages">
+					<div class=" row">
 						<div class="col-sm">
-							<div class="card">
-								<div class="card-pic"></div>
-								<h4>$40 for 30 days</h4>
-								<p>Unlimited Yoga intro package</p>
-								<button type="button" name="button">Buy Now!</button>
+							<div class="card" style="width:auto;">
+                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">$40 for 30 days</h5>
+                                  <p class="card-text">Unlimited Yoga intro package</p>
+                                  <a href="#" class="btn btn-primary">BUY NOW</a>
+                                </div>
 							</div>
 						</div>
 
-						<div class="col-sm">
-							<div class="card">
-								<div class="card-pic"></div>
-								<h4>$99 <br> monthly</h4>
-								<p>Unlimited Yoga auto renew program</p>
-								<button type="button" name="button">Buy Now!</button>
+                        <div class="col-sm">
+							<div class="card" style="width: auto;">
+                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">$99 monthly</h5>
+                                  <p class="card-text">Unlimited Yoga Renew Program</p>
+                                  <a href="#" class="btn btn-primary">BUY NOW</a>
+                                </div>
 							</div>
 						</div>
 
-						<div class="col-sm">
-							<div class="card">
-								<div class="card-pic"></div>
-								<h4>20 class card</h4>
-								<p>vlaid at all studios</p>
-								<button type="button" name="button">Buy Now!</button>
+                        <div class="col-sm">
+							<div class="card" style="width: auto">
+                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">$20 Class card</h5>
+                                  <p class="card-text">Valid at all studios</p>
+                                  <a href="#" class="btn btn-primary">BUY NOW</a>
+                                </div>
 							</div>
 						</div>
 
-						<div class="col-sm">
+                        <div class="col-sm">
+                            <div class="card" style="width: auto;">
+                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">visit our store for more</h5>
+                                  <p class="card-text">Choose from our many classes</p>
+                                  <a href="#" class="btn btn-primary">BUY NOW</a>
+                                </div>
+                            </div>
+                        </div>
+						<!-- <div class="col-sm">
 							<div class="card">
 								<div class="card-pic"></div>
 								<h4>visit our store for more</h4>
 								<!-- <p>Unlimited Yoga intro package</p> -->
-								<button type="button" name="button">Buy Now!</button>
-							</div>
-						</div>
+								<!-- <button type="button" name="button">Buy Now!</button> -->
+							<!-- </div> -->
+						<!-- </div> -->
 
 					</div>
 				</div>
@@ -198,15 +214,20 @@
 
 		<!---about-------------------------------------->
 
-		<div class="extra-images">
-			<!-- <div class="images-1"></div> -->
-			<img class='images-1' src="Pics/1.jpg" alt="pic">
-			<img class='images-2' src="Pics/2.jpg" alt="pic">
-			<img class='images-3' src="Pics/3.jpg" alt="pic">
+		<div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <img class='img-fluid' src="Pics/1.jpg" alt="pic">
+                </div>
+                <div class="col">
+                    <img class='img-fluid' src="Pics/2.jpg" alt="pic">
+                </div>
+                <div class="col">
+                    <img class='img-fluid' src="Pics/3.jpg" alt="pic">
+                </div>
+            </div>
 		</div>
-		<div class="extra-images-1">
-			<img class='images-2' src="Pics/2.jpg" alt="pic">
-		</div>
+
 
 		<!-- footer---------------------------------------------------------------->
 		<div class="footer-wrapper" id="contact">
