--- a/index.html
+++ b/index.html
@@ -85,31 +85,35 @@
 			<h4 class='section-name'>Class schedules</h4>
 			<div class="container">
 				<div class="row ">
-					<div class="col detail yoga">
+					<div class="col-sm-6 col-md-4 detail">
+                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
 						<p>Yoga</p>
 						<button type="button" name="button">details</button>
 					</div>
-					<div class="col detail">
-						<p>CrossFit</p>
+					<div class="col-sm-6 col-md-4 detail">
+                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <p>CrossFit</p>
 						<button type="button" name="button">details</button>
 					</div>
-					<div class="col detail">
-						<p>Bootcamp</p>
+					<div class="col-sm-6 col-md-4 detail">
+                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <p>Bootcamp</p>
 						<button type="button" name="button">details</button>
 					</div>
 
-					<div class="w-100"></div>
-
-					<div class="col detail">
-						<p>Spinning</p>
+					<div class="col-sm-6 col-md-4 detail">
+                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <p>Spinning</p>
 						<button type="button" name="button">details</button>
 					</div>
-					<div class="col detail">
-						<p>Pilates</p>
+					<div class="col-sm-6 col-md-4 detail">
+                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <p>Pilates</p>
 						<button type="button" name="button">details</button>
 					</div>
-					<div class="col detail">
-						<p>Martial Arts</p>
+					<div class="col-sm-6 col-md-4 detail">
+                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <p>Martial Arts</p>
 						<button type="button" name="button">details</button>
 					</div>
 				</div>
@@ -121,10 +125,10 @@
 		<div class='bg2' id="packages">
 			<div class='wrap2'>
 				<h4 class='section-name'>packages</h4>
-				<div class="Container">
+				<div class="container">
 					<div class=" row">
-						<div class="col-sm">
-							<div class="card" style="width:auto;">
+						<div class="col-sm-6 col-md-6 col-lg">
+							<div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">$40 for 30 days</h5>
@@ -134,8 +138,8 @@
 							</div>
 						</div>
 
-                        <div class="col-sm">
-							<div class="card" style="width: auto;">
+                        <div class="col-sm-6 col-md-6 col-lg">
+							<div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">$99 monthly</h5>
@@ -145,8 +149,8 @@
 							</div>
 						</div>
 
-                        <div class="col-sm">
-							<div class="card" style="width: auto">
+                        <div class="col-sm-6 col-md-6 col-lg">
+							<div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">$20 Class card</h5>
@@ -156,8 +160,8 @@
 							</div>
 						</div>
 
-                        <div class="col-sm">
-                            <div class="card" style="width: auto;">
+                        <div class="col-sm-6 col-md-6 col-lg">
+                            <div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">visit our store for more</h5>
@@ -213,20 +217,22 @@
 		</section>
 
 		<!---about-------------------------------------->
-
-		<div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <img class='img-fluid' src="Pics/1.jpg" alt="pic">
-                </div>
-                <div class="col">
-                    <img class='img-fluid' src="Pics/2.jpg" alt="pic">
-                </div>
-                <div class="col">
-                    <img class='img-fluid' src="Pics/3.jpg" alt="pic">
-                </div>
+<div class="ending">
+    <div class="container-fluid no-padding">
+        <div class="row">
+            <div class="col-sm  footer-img vis">
+                <!-- <img class="img-fluid footer-img vis" src="Pics/1.jpg" alt="pic"> -->
             </div>
-		</div>
+            <div class="col-sm footer-img">
+                <!-- <img class="img-fluid footer-img" src="Pics/2.jpg" alt="pic"> -->
+            </div>
+            <div class="col-sm footer-img vis">
+                <!-- <img class="img-fluid footer-img vis" src="Pics/3.jpg" alt="pic"> -->
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 		<!-- footer---------------------------------------------------------------->
