--- a/index.html
+++ b/index.html
@@ -220,13 +220,22 @@
 <div class="ending">
     <div class="container-fluid no-padding">
         <div class="row">
-            <div class="col-sm  footer-img vis">
+            <div class="col-sm vis">
+                <div class="footer-img">
+
+                </div>
                 <!-- <img class="img-fluid footer-img vis" src="Pics/1.jpg" alt="pic"> -->
             </div>
-            <div class="col-sm footer-img">
+            <div class="col-sm">
+                <div class="footer-img">
+
+                </div>
                 <!-- <img class="img-fluid footer-img" src="Pics/2.jpg" alt="pic"> -->
             </div>
-            <div class="col-sm footer-img vis">
+            <div class="col-sm vis">
+                <div class="footer-img">
+
+                </div>
                 <!-- <img class="img-fluid footer-img vis" src="Pics/3.jpg" alt="pic"> -->
             </div>
         </div>
