--- a/index.html
+++ b/index.html
@@ -84,37 +84,48 @@
 		<div class='wrap'id="schedule">
 			<h4 class='section-name'>Class schedules</h4>
 			<div class="container">
-				<div class="row ">
-					<div class="col-sm-6 col-md-4 detail">
+				<div class="row">
+					<div class="col-sm-6 col-md-4 detail mb-3 ">
                         <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-						<p>Yoga</p>
-						<button type="button" name="button">details</button>
+                        <div class="caption">
+                            <p>Yoga</p>
+                            <button type="button" name="button">details</button>
+                        </div>
 					</div>
-					<div class="col-sm-6 col-md-4 detail">
-                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <p>CrossFit</p>
-						<button type="button" name="button">details</button>
+					<div class="col-sm-6 col-md-4 detail mb-3">
+						<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						<div class="caption">
+							<p>CrossFit</p>
+							<button type="button" name="button">details</button>
+						</div>
 					</div>
-					<div class="col-sm-6 col-md-4 detail">
-                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <p>Bootcamp</p>
-						<button type="button" name="button">details</button>
+					<div class="col-sm-6 col-md-4 detail mb-3">
+                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <div class="caption">
+                            <p>Bootcamp</p>
+                            <button type="button" name="button">details</button>
+                        </div>
 					</div>
-
-					<div class="col-sm-6 col-md-4 detail">
-                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <p>Spinning</p>
-						<button type="button" name="button">details</button>
+					<div class="col-sm-6 col-md-4 detail mb-3">
+                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <div class="caption">
+                            <p>Spinning</p>
+                            <button type="button" name="button">details</button>
+                        </div>
 					</div>
-					<div class="col-sm-6 col-md-4 detail">
-                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <p>Pilates</p>
-						<button type="button" name="button">details</button>
+					<div class="col-sm-6 col-md-4 detail mb-3">
+                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <div class="caption">
+                            <p>Pilates</p>
+                            <button type="button" name="button">details</button>
+                        </div>
 					</div>
-					<div class="col-sm-6 col-md-4 detail">
-                    <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <p>Martial Arts</p>
-						<button type="button" name="button">details</button>
+					<div class="col-sm-6 col-md-4 detail mb-3">
+                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+                        <div class="caption">
+                            <p>Martial Arts</p>
+                            <button type="button" name="button">details</button>
+                        </div>
 					</div>
 				</div>
 			</div>
@@ -127,7 +138,7 @@
 				<h4 class='section-name'>packages</h4>
 				<div class="container">
 					<div class=" row">
-						<div class="col-sm-6 col-md-6 col-lg">
+						<div class="col-sm-6 col-md-6 col-lg mb-3">
 							<div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
@@ -138,7 +149,7 @@
 							</div>
 						</div>
 
-                        <div class="col-sm-6 col-md-6 col-lg">
+                        <div class="col-sm-6 col-md-6 col-lg mb-3">
 							<div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
@@ -149,7 +160,7 @@
 							</div>
 						</div>
 
-                        <div class="col-sm-6 col-md-6 col-lg">
+                        <div class="col-sm-6 col-md-6 col-lg mb-3">
 							<div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
@@ -160,7 +171,7 @@
 							</div>
 						</div>
 
-                        <div class="col-sm-6 col-md-6 col-lg">
+                        <div class="col-sm-6 col-md-6 col-lg mb-3">
                             <div class="card">
                                 <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
