--- a/index.html
+++ b/index.html
@@ -81,51 +81,63 @@
 
 		<!-- new schedules-------------------------------------->
 
-		<div class='wrap'id="schedule">
+		<div class='wrap' id="schedule">
 			<h4 class='section-name'>Class schedules</h4>
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-6 col-md-4 detail mb-3 ">
-                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <div class="caption">
-                            <p>Yoga</p>
-                            <button type="button" name="button">details</button>
-                        </div>
+					<div class="col-sm-6 col-md-4 detail mb-3">
+						<div class="overlay">
+							<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						</div>
+						<div class="caption">
+							<p>Yoga</p>
+							<button type="button" name="button">details</button>
+						</div>
 					</div>
 					<div class="col-sm-6 col-md-4 detail mb-3">
-						<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						<div class="overlay">
+							<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						</div>
 						<div class="caption">
 							<p>CrossFit</p>
 							<button type="button" name="button">details</button>
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-4 detail mb-3">
-                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <div class="caption">
-                            <p>Bootcamp</p>
-                            <button type="button" name="button">details</button>
-                        </div>
+						<div class="overlay">
+							<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						</div>
+						<div class="caption">
+							<p>Bootcamp</p>
+							<button type="button" name="button">details</button>
+						</div>
 					</div>
 					<div class="col-sm-6 col-md-4 detail mb-3">
-                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <div class="caption">
-                            <p>Spinning</p>
-                            <button type="button" name="button">details</button>
-                        </div>
+						<div class="overlay">
+							<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						</div>
+						<div class="caption">
+							<p>Spinning</p>
+							<button type="button" name="button">details</button>
+						</div>
 					</div>
 					<div class="col-sm-6 col-md-4 detail mb-3">
-                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <div class="caption">
-                            <p>Pilates</p>
-                            <button type="button" name="button">details</button>
-                        </div>
+						<div class="overlay">
+							<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						</div>
+						<div class="caption">
+							<p>Pilates</p>
+							<button type="button" name="button">details</button>
+						</div>
 					</div>
 					<div class="col-sm-6 col-md-4 detail mb-3">
-                        <img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
-                        <div class="caption">
-                            <p>Martial Arts</p>
-                            <button type="button" name="button">details</button>
-                        </div>
+						<div class="overlay">
+							<img class="img-fluid" src="Pics/yoga.jpg" alt="yoga">
+						</div>
+						<div class="caption">
+							<p>Martial Arts</p>
+							<button type="button" name="button">details</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -140,54 +152,54 @@
 					<div class=" row">
 						<div class="col-sm-6 col-md-6 col-lg mb-3">
 							<div class="card">
-                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <h5 class="card-title">$40 for 30 days</h5>
-                                  <p class="card-text">Unlimited Yoga intro package</p>
-                                  <a href="#" class="btn btn-primary">BUY NOW</a>
-                                </div>
+								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">$40 for 30 days</h5>
+									<p class="card-text">Unlimited Yoga intro package</p>
+									<a href="#" class="btn btn-primary">BUY NOW</a>
+								</div>
 							</div>
 						</div>
 
-                        <div class="col-sm-6 col-md-6 col-lg mb-3">
+						<div class="col-sm-6 col-md-6 col-lg mb-3">
 							<div class="card">
-                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <h5 class="card-title">$99 monthly</h5>
-                                  <p class="card-text">Unlimited Yoga Renew Program</p>
-                                  <a href="#" class="btn btn-primary">BUY NOW</a>
-                                </div>
+								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">$99 monthly</h5>
+									<p class="card-text">Unlimited Yoga Renew Program</p>
+									<a href="#" class="btn btn-primary">BUY NOW</a>
+								</div>
 							</div>
 						</div>
 
-                        <div class="col-sm-6 col-md-6 col-lg mb-3">
+						<div class="col-sm-6 col-md-6 col-lg mb-3">
 							<div class="card">
-                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <h5 class="card-title">$20 Class card</h5>
-                                  <p class="card-text">Valid at all studios</p>
-                                  <a href="#" class="btn btn-primary">BUY NOW</a>
-                                </div>
+								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">$20 Class card</h5>
+									<p class="card-text">Valid at all studios</p>
+									<a href="#" class="btn btn-primary">BUY NOW</a>
+								</div>
 							</div>
 						</div>
 
-                        <div class="col-sm-6 col-md-6 col-lg mb-3">
-                            <div class="card">
-                                <img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <h5 class="card-title">visit our store for more</h5>
-                                  <p class="card-text">Choose from our many classes</p>
-                                  <a href="#" class="btn btn-primary">BUY NOW</a>
-                                </div>
-                            </div>
-                        </div>
+						<div class="col-sm-6 col-md-6 col-lg mb-3">
+							<div class="card">
+								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">visit our store for more</h5>
+									<p class="card-text">Choose from our many classes</p>
+									<a href="#" class="btn btn-primary">BUY NOW</a>
+								</div>
+							</div>
+						</div>
 						<!-- <div class="col-sm">
 							<div class="card">
 								<div class="card-pic"></div>
 								<h4>visit our store for more</h4>
 								<!-- <p>Unlimited Yoga intro package</p> -->
-								<!-- <button type="button" name="button">Buy Now!</button> -->
-							<!-- </div> -->
+						<!-- <button type="button" name="button">Buy Now!</button> -->
+						<!-- </div> -->
 						<!-- </div> -->
 
 					</div>
@@ -222,36 +234,37 @@
 					</svg>
 
 				</div>
-				<p>Lorem ipsum dolor sit amet, eiusmod tempom ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+				<p>Lorem ipsum dolor sit amet, eiusmod tempom ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+					nulla
 					pariatur. Excepteur sint occaecat non proident, qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 		</section>
 
 		<!---about-------------------------------------->
-<div class="ending">
-    <div class="container-fluid no-padding">
-        <div class="row">
-            <div class="col-sm vis">
-                <div class="footer-img">
+		<div class="ending">
+			<div class="container-fluid no-padding">
+				<div class="row">
+					<div class="col-sm vis">
+						<div class="footer-img">
 
-                </div>
-                <!-- <img class="img-fluid footer-img vis" src="Pics/1.jpg" alt="pic"> -->
-            </div>
-            <div class="col-sm">
-                <div class="footer-img">
+						</div>
+						<!-- <img class="img-fluid footer-img vis" src="Pics/1.jpg" alt="pic"> -->
+					</div>
+					<div class="col-sm">
+						<div class="footer-img">
 
-                </div>
-                <!-- <img class="img-fluid footer-img" src="Pics/2.jpg" alt="pic"> -->
-            </div>
-            <div class="col-sm vis">
-                <div class="footer-img">
+						</div>
+						<!-- <img class="img-fluid footer-img" src="Pics/2.jpg" alt="pic"> -->
+					</div>
+					<div class="col-sm vis">
+						<div class="footer-img">
 
-                </div>
-                <!-- <img class="img-fluid footer-img vis" src="Pics/3.jpg" alt="pic"> -->
-            </div>
-        </div>
-    </div>
-</div>
+						</div>
+						<!-- <img class="img-fluid footer-img vis" src="Pics/3.jpg" alt="pic"> -->
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 
