--- a/index.html
+++ b/index.html
@@ -244,19 +244,19 @@
 		<div class="ending">
 			<div class="container-fluid no-padding">
 				<div class="row">
-					<div class="col-sm vis">
+					<div class="box col-sm vis">
 						<div class="footer-img">
 
 						</div>
 						<!-- <img class="img-fluid footer-img vis" src="Pics/1.jpg" alt="pic"> -->
 					</div>
-					<div class="col-sm">
+					<div class="box col-sm">
 						<div class="footer-img">
 
 						</div>
 						<!-- <img class="img-fluid footer-img" src="Pics/2.jpg" alt="pic"> -->
 					</div>
-					<div class="col-sm vis">
+					<div class="box col-sm vis">
 						<div class="footer-img">
 
 						</div>
