--- a/index.html
+++ b/index.html
@@ -150,58 +150,54 @@
 				<h4 class='section-name'>packages</h4>
 				<div class="container">
 					<div class=" row">
+
 						<div class="col-sm-6 col-md-6 col-lg mb-3">
-							<div class="card">
+							<div class="card h-100">
 								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-								<div class="card-body">
+								<div class="card-body d-flex flex-column justify-content-between">
 									<h5 class="card-title">$40 for 30 days</h5>
 									<p class="card-text">Unlimited Yoga intro package</p>
-									<a href="#" class="btn btn-primary">BUY NOW</a>
+									<input type="button" class="btn btn-primary" name="BTN" value="BUY NOW">
 								</div>
 							</div>
 						</div>
 
+
 						<div class="col-sm-6 col-md-6 col-lg mb-3">
-							<div class="card">
+							<div class="card h-100">
 								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-								<div class="card-body">
+								<div class="card-body d-flex flex-column justify-content-between">
 									<h5 class="card-title">$99 monthly</h5>
 									<p class="card-text">Unlimited Yoga Renew Program</p>
-									<a href="#" class="btn btn-primary">BUY NOW</a>
+									<input type="button" class="btn btn-primary" name="BTN" value="BUY NOW">
 								</div>
 							</div>
 						</div>
+
 
 						<div class="col-sm-6 col-md-6 col-lg mb-3">
-							<div class="card">
+							<div class="card h-100">
 								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-								<div class="card-body">
-									<h5 class="card-title">$20 Class card</h5>
-									<p class="card-text">Valid at all studios</p>
-									<a href="#" class="btn btn-primary">BUY NOW</a>
+								<div class="card-body d-flex flex-column justify-content-between">
+
+										<h5 class="card-title">$20 Class card</h5>
+										<p class="card-text">Valid at all studios</p>
+
+
+									<input type="button" class="btn btn-primary" name="BTN" value="BUY NOW">
 								</div>
 							</div>
 						</div>
-
 						<div class="col-sm-6 col-md-6 col-lg mb-3">
-							<div class="card">
+							<div class="card h-100">
 								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
-								<div class="card-body">
-									<h5 class="card-title">visit our store for more</h5>
-									<p class="card-text">Choose from our many classes</p>
-									<a href="#" class="btn btn-primary">BUY NOW</a>
+								<div class="card-body d-flex flex-column justify-content-between">
+										<h5 class="card-title">visit our store for more</h5>
+										<p class="card-text">Choose from our many classes</p>
+									<input type="button" class="btn btn-primary" name="BTN" value="BUY NOW">
 								</div>
 							</div>
 						</div>
-						<!-- <div class="col-sm">
-							<div class="card">
-								<div class="card-pic"></div>
-								<h4>visit our store for more</h4>
-								<!-- <p>Unlimited Yoga intro package</p> -->
-						<!-- <button type="button" name="button">Buy Now!</button> -->
-						<!-- </div> -->
-						<!-- </div> -->
-
 					</div>
 				</div>
 			</div>
