--- a/index.html
+++ b/index.html
@@ -67,16 +67,38 @@
 		</nav>
 
 		<div class="hero">
-			<article class='hero-form'>
+			<form class="m-4">
+				<div class="form-row">
+					<div class="form-group col-md-6">
+						<!-- <label for="inputEmail4">Email</label> -->
+						<input type="email" class="form-control" id="fname" placeholder="First name">
+					</div>
+					<div class="form-group col-md-6">
+						<!-- <label for="inputPassword4">Password</label> -->
+						<input type="password" class="form-control" id="Lname" placeholder="Last name">
+					</div>
+				</div>
+				<div class="form-group">
+					<!-- <label for="inputAddress">Address</label> -->
+					<input type="text" class="form-control" id="inputEmail" placeholder="Email">
+				</div>
+				<div class="form-group">
+					<!-- <label for="inputAddress2">Address 2</label> -->
+					<input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
+				</div>
+				<button type="submit" class="btn btn-primary">Recieve one month free</button>
+			</form>
+
+			<!-- <article class='hero-form mt-4 mt-sm-5 mr-sm-5'>
 				<form class="form">
-					<!-- <label for="first-name"></label> -->
+					 <label for="first-name"></label>
 					<input placeholder="First name" type="text">
 					<input placeholder="Last name" type="text">
 					<input placeholder="email" type="text">
 					<input placeholder="Phone number" type="text">
 					<button type="submit" name="button">recieve one month free</button>
 				</form>
-			</article>
+			</article> -->
 		</div>
 
 		<!-- new schedules-------------------------------------->
@@ -180,8 +202,8 @@
 								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
 								<div class="card-body d-flex flex-column justify-content-between">
 
-										<h5 class="card-title">$20 Class card</h5>
-										<p class="card-text">Valid at all studios</p>
+									<h5 class="card-title">$20 Class card</h5>
+									<p class="card-text">Valid at all studios</p>
 
 
 									<input type="button" class="btn btn-primary" name="BTN" value="BUY NOW">
@@ -192,8 +214,8 @@
 							<div class="card h-100">
 								<img src="Pics/yoga.jpg" class="card-img-top" alt="...">
 								<div class="card-body d-flex flex-column justify-content-between">
-										<h5 class="card-title">visit our store for more</h5>
-										<p class="card-text">Choose from our many classes</p>
+									<h5 class="card-title">visit our store for more</h5>
+									<p class="card-text">Choose from our many classes</p>
 									<input type="button" class="btn btn-primary" name="BTN" value="BUY NOW">
 								</div>
 							</div>
