--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<button type="button" name="button" id='signIn'> <a href="#" target="_blank">Sign In</a></button>
 		</div>
 		<!--  navigation-->
-		<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
 			<svg class="navbar-brand logo" width="183px" height="46px" viewBox="0 0 183 46" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 				<!-- Generator: Sketch 47.1 (45422) - http://www.bohemiancoding.com/sketch -->
@@ -71,20 +71,20 @@
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<!-- <label for="inputEmail4">Email</label> -->
-						<input type="email" class="form-control" id="fname" placeholder="First name">
+						<input type="email" class="form-control form-control-lg" id="fname" placeholder="First name">
 					</div>
 					<div class="form-group col-md-6">
 						<!-- <label for="inputPassword4">Password</label> -->
-						<input type="password" class="form-control" id="Lname" placeholder="Last name">
+						<input type="password" class="form-control form-control-lg" id="Lname" placeholder="Last name">
 					</div>
 				</div>
 				<div class="form-group">
 					<!-- <label for="inputAddress">Address</label> -->
-					<input type="text" class="form-control" id="inputEmail" placeholder="Email">
+					<input type="text" class="form-control form-control-lg" id="inputEmail" placeholder="Email">
 				</div>
 				<div class="form-group">
 					<!-- <label for="inputAddress2">Address 2</label> -->
-					<input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
+					<input type="text" class="form-control form-control-lg" id="phoneNumber" placeholder="Phone Number">
 				</div>
 				<button type="submit" class="btn btn-primary">Recieve one month free</button>
 			</form>
@@ -228,7 +228,7 @@
 		<section class="wrap-about" id="about">
 			<div class="about">
 				<div class="about-logo">
-					<h4>welcome to </h4>
+					<p class="header">welcome to </p>
 					<svg width="183px" height="46px" viewBox="0 0 183 46" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						<!-- Generator: Sketch 47.1 (45422) - http://www.bohemiancoding.com/sketch -->
 						<title>MyYogaStudio</title>
