--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		</nav>
 
 		<div class="hero">
-			<form class="m-5">
+			<form class="m-3 m-sm-5">
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<!-- <label for="inputEmail4">Email</label> -->
